# bamboo-delphesexample

./: .gitignore  BambooDelphes.py  README.md  delphes_helpers.h  test.yml
DelphesIO/: CMakeLists.txt  classes_def.xml  getSources.sh  sources.patch
